--- a/resources/style.css
+++ b/resources/style.css
@@ -1,3 +1,16 @@
+* {
+    box-sizing: border-box;
+}
+
+#site_subtitle {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     font-size: 1em;
@@ -28,9 +41,10 @@ header h1 {
     margin-bottom: 0;
 }
 
-header p {
+#site_subtitle {
     /* Without this there's a tiny visual mismatch that bothers me */
     margin-left: 0.09em;
+    cursor: pointer;
 }
 
 .post {
